--- a/style/style.scss
+++ b/style/style.scss
@@ -1,3 +1,58 @@
 * {
-  background-color: red;
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  text-align: center;
+  margin-top: 2%;
+  h1 {
+    font-family: 'Merienda One', cursive;
+    font-size: 64px;
+  }
+
+  h4 {
+    font-family: 'Sedgwick Ave', cursive;
+    text-align: end;
+    font-size: 2em;
+    color: white;
+    background-color: black;
+    width: 53%;
+    padding-right: 15%;
+  }
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 5%;
+}
+
+.gameboard {
+  width: 20vw;
+  height: 35vh;
+
+  display: grid;
+  grid: repeat(3, 1fr) / repeat(3, 1fr);
+  gap: 10px;
+  border-radius: 10%;
+}
+
+.cell {
+  background-color: rgba(80, 134, 155, 0.822);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10%;
+  font-family: 'Sedgwick Ave', cursive;
+  font-size: 3em;
+}
+
+.info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
