Add div element with input for player names
Create input elements and submit buttons, add style to them

--- a/style/style.scss
+++ b/style/style.scss
@@ -55,4 +55,11 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 5%;
+
+  .player {
+    display: inherit;
+    flex-direction: column;
+    gap: 1em;
+  }
 }
