--- a/style/style.css
+++ b/style/style.css
@@ -74,5 +74,15 @@ header h4 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  gap: 5%;
+}
+
+.info .player {
+  display: inherit;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 1em;
 }
 /*# sourceMappingURL=style.css.map */
