--- a/style/style.css
+++ b/style/style.css
@@ -3,6 +3,10 @@
   padding: 0;
 }
 
+body {
+  background-color: #402e32;
+}
+
 header {
   display: -ms-grid;
   display: grid;
@@ -28,6 +32,7 @@ header h1 {
   white-space: nowrap;
   font-size: 64px;
   letter-spacing: 0.1em;
+  color: #a54f11;
 }
 
 header .left-bar {
@@ -51,7 +56,7 @@ header .left-bar h4 {
   grid-column: 2/3;
   font-family: 'Sedgwick Ave', cursive;
   font-size: 2em;
-  color: white;
+  color: #d37430;
   width: 100%;
   padding-top: 1%;
 }
@@ -86,7 +91,7 @@ a {
   text-decoration: none;
   font-family: 'Sedgwick Ave', cursive;
   letter-spacing: 1px;
-  color: black;
+  color: white;
 }
 
 .container {
@@ -113,7 +118,7 @@ a {
 }
 
 .container .gameboard .cell {
-  background-color: rgba(80, 134, 155, 0.822);
+  background-color: #a97d73;
   width: 100%;
   height: 100%;
   display: -webkit-box;
@@ -128,6 +133,14 @@ a {
   border-radius: 10%;
   font-family: 'Sedgwick Ave', cursive;
   font-size: 3em;
+}
+
+.container .gameboard .player-x {
+  color: #4c8077;
+}
+
+.container .gameboard .player-o {
+  color: #a73b43;
 }
 
 .info {
@@ -158,6 +171,7 @@ a {
   font-size: 2em;
   text-align: center;
   padding-bottom: 5%;
+  color: white;
 }
 
 button {
@@ -166,7 +180,7 @@ button {
   padding: 0.5rem 1rem;
   margin: 0;
   text-decoration: none;
-  background: #0069ed;
+  background: #d37430;
   color: #ffffff;
   font-family: sans-serif;
   font-size: 1rem;
@@ -179,11 +193,12 @@ button {
   transition: background 250ms ease-in-out, transform 150ms ease, -webkit-transform 150ms ease;
   -webkit-appearance: none;
   -moz-appearance: none;
+  border-radius: 10px;
 }
 
 button:hover,
 button:focus {
-  background: #0053ba;
+  background: #d37430;
 }
 
 button:focus {
@@ -215,7 +230,6 @@ footer .right-bar {
   right: 0;
   height: 4.1%;
   width: 66.66%;
-  color: white;
   background-color: black;
   bottom: 0;
   border-radius: 10px 0 0 0;
@@ -268,6 +282,16 @@ footer .right-bar {
   padding: 2%;
   background-color: rgba(0, 0, 0, 0.9);
   border-radius: 20px;
+}
+
+input {
+  border-radius: 10px;
+  border-style: none;
+  text-align: center;
+}
+
+input[type='text']:focus {
+  border-bottom: 3px solid black;
 }
 
 h2 {
