--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,8 @@
 * {
   margin: 0;
   padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
@@ -48,6 +50,12 @@ header .left-bar {
       grid-template-columns: 1fr 1fr;
   background-color: rgba(0, 0, 0, 0.9);
   border-radius: 0 10px 10px 0;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 header .left-bar h4 {
@@ -58,7 +66,6 @@ header .left-bar h4 {
   font-size: 2em;
   color: #d37430;
   width: 100%;
-  padding-top: 1%;
 }
 
 .github {
@@ -103,8 +110,30 @@ a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-top: 5%;
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
+
+.container .player-turn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin-bottom: 5%;
+  font-size: 2rem;
+  font-size: 2em;
+  letter-spacing: 1px;
+  padding: 2%;
+  width: inherit;
+  border: 2px solid black;
+  border-radius: 10px;
+  background-color: #d37430;
+  font-family: 'Sedgwick Ave', cursive;
 }
 
 .container .gameboard {
@@ -133,6 +162,7 @@ a {
   border-radius: 10%;
   font-family: 'Sedgwick Ave', cursive;
   font-size: 3em;
+  text-shadow: 2px 2px 10px black;
 }
 
 .container .gameboard .player-x {
@@ -154,6 +184,7 @@ a {
       -ms-flex-align: center;
           align-items: center;
   gap: 5%;
+  margin-bottom: 5%;
 }
 
 .info .player {
@@ -172,6 +203,10 @@ a {
   text-align: center;
   padding-bottom: 5%;
   color: white;
+}
+
+.info .highlight {
+  text-shadow: 5px 5px 5px #d37430;
 }
 
 button {
@@ -213,26 +248,6 @@ button:active {
 
 input {
   padding: 0.3rem 0.5rem;
-}
-
-footer {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1fr 1fr 1fr;
-      grid-template-columns: 1fr 1fr 1fr;
-}
-
-footer .right-bar {
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 2;
-  grid-column: 2/4;
-  position: absolute;
-  right: 0;
-  height: 4.1%;
-  width: 66.66%;
-  background-color: black;
-  bottom: 0;
-  border-radius: 10px 0 0 0;
 }
 
 .modal-bg {
@@ -282,6 +297,8 @@ footer .right-bar {
   padding: 2%;
   background-color: rgba(0, 0, 0, 0.9);
   border-radius: 20px;
+  font-family: 'Sedgwick Ave', cursive;
+  letter-spacing: 2px;
 }
 
 input {
