--- a/style/style.scss
+++ b/style/style.scss
@@ -9,6 +9,7 @@ $colorO: #a73b43;
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
@@ -39,6 +40,8 @@ header {
     grid-template-columns: 1fr 1fr;
     background-color: rgba(0, 0, 0, 0.9);
     border-radius: 0 10px 10px 0;
+    align-items: center;
+    justify-content: center;
 
     h4 {
       grid-column: 2/3;
@@ -46,7 +49,6 @@ header {
       font-size: 2em;
       color: $secondaryColor;
       width: 100%;
-      padding-top: 1%;
     }
   }
 }
@@ -75,8 +77,25 @@ a {
   display: grid;
   justify-content: center;
   align-items: center;
-  margin-top: 5%;
-  margin-bottom: 5%;
+  margin-top: 2%;
+  margin-bottom: 2%;
+
+  .player-turn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 5%;
+    font-size: 2rem;
+    font-size: 2em;
+    letter-spacing: 1px;
+    padding: 2%;
+    width: inherit;
+    border: 2px solid black;
+    border-radius: 10px;
+    background-color: $secondaryColor;
+    font-family: 'Sedgwick Ave', cursive;
+  }
+
   .gameboard {
     width: 20vw;
     height: 35vh;
@@ -96,14 +115,17 @@ a {
       border-radius: 10%;
       font-family: 'Sedgwick Ave', cursive;
       font-size: 3em;
+      text-shadow: 2px 2px 10px rgb(0, 0, 0);
     }
 
     .player-x {
       color: $colorX;
+      // animation: appear 0.2s cubic-bezier(0.5, 1.8, 0.1, 1.1);
     }
 
     .player-o {
       color: $colorO;
+      // animation: appear 0.2s cubic-bezier(0.5, 1.8, 0.1, 1.1);
     }
   }
 }
@@ -113,6 +135,7 @@ a {
   justify-content: center;
   align-items: center;
   gap: 5%;
+  margin-bottom: 5%;
 
   .player {
     display: inherit;
@@ -126,6 +149,10 @@ a {
     text-align: center;
     padding-bottom: 5%;
     color: white;
+  }
+
+  .highlight {
+    text-shadow: 5px 5px 5px $secondaryColor;
   }
 }
 
@@ -166,22 +193,6 @@ input {
   padding: 0.3rem 0.5rem;
 }
 
-footer {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-
-  .right-bar {
-    grid-column: 2/4;
-    position: absolute;
-    right: 0;
-    height: 4.1%;
-    width: 66.66%;
-    background-color: black;
-    bottom: 0;
-    border-radius: 10px 0 0 0;
-  }
-}
-
 // Modal window.
 
 .modal-bg {
@@ -216,6 +227,8 @@ footer {
   padding: 2%;
   background-color: rgba(0, 0, 0, 0.9);
   border-radius: 20px;
+  font-family: 'Sedgwick Ave', cursive;
+  letter-spacing: 2px;
 }
 
 input {
