--- a/style/style.scss
+++ b/style/style.scss
@@ -84,7 +84,8 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 5%;
+    margin-bottom: 15%;
+    margin-top: 6%;
     font-size: 2rem;
     font-size: 2em;
     letter-spacing: 1px;
