--- a/style/style.css
+++ b/style/style.css
@@ -124,7 +124,8 @@ a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-bottom: 5%;
+  margin-bottom: 15%;
+  margin-top: 6%;
   font-size: 2rem;
   font-size: 2em;
   letter-spacing: 1px;
